PROYECTO/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> funciones
Rule 2     funciones -> funcion_or_main funciones
Rule 3     funciones -> funcion_or_main
Rule 4     funcion_or_main -> regular_function
Rule 5     funcion_or_main -> main_function_def
Rule 6     regular_function -> tipo ID LPAREN parametros RPAREN bloque
Rule 7     main_function_def -> VOID MAIN LPAREN parametros RPAREN bloque
Rule 8     parametros -> parametro parametros_rest
Rule 9     parametros -> empty
Rule 10    parametros_rest -> COMMA parametro parametros_rest
Rule 11    parametros_rest -> empty
Rule 12    parametro -> tipo ID
Rule 13    bloque -> LBRACE instrucciones RBRACE
Rule 14    instrucciones -> instruccion instrucciones
Rule 15    instrucciones -> empty
Rule 16    instruccion -> declaracion SEMI
Rule 17    instruccion -> asignacion SEMI
Rule 18    instruccion -> If
Rule 19    instruccion -> While
Rule 20    instruccion -> For
Rule 21    instruccion -> Return
Rule 22    instruccion -> Print
Rule 23    declaracion -> tipo ID inicializacion
Rule 24    inicializacion -> EQUALS exp
Rule 25    inicializacion -> empty
Rule 26    asignacion -> ID EQUALS exp
Rule 27    If -> IF LPAREN exp RPAREN bloque Else
Rule 28    Else -> ELSE bloque
Rule 29    Else -> empty
Rule 30    While -> WHILE LPAREN exp RPAREN bloque
Rule 31    For -> FOR LPAREN asignacion SEMI exp SEMI asignacion RPAREN bloque
Rule 32    Return -> RETURN exp_opt SEMI
Rule 33    exp_opt -> exp
Rule 34    exp_opt -> empty
Rule 35    Print -> PRINT LPAREN exp RPAREN SEMI
Rule 36    tipo -> INT
Rule 37    tipo -> FLOAT
Rule 38    tipo -> BOOL
Rule 39    tipo -> STRING
Rule 40    tipo -> VOID
Rule 41    exp -> E
Rule 42    E -> C E_rest
Rule 43    E_rest -> OR C E_rest
Rule 44    E_rest -> empty
Rule 45    C -> R C_rest
Rule 46    C_rest -> AND R C_rest
Rule 47    C_rest -> empty
Rule 48    R -> T R_rest
Rule 49    R_rest -> EQ T R_rest
Rule 50    R_rest -> NE T R_rest
Rule 51    R_rest -> LT T R_rest
Rule 52    R_rest -> GT T R_rest
Rule 53    R_rest -> LE T R_rest
Rule 54    R_rest -> GE T R_rest
Rule 55    R_rest -> empty
Rule 56    T -> F T_rest
Rule 57    T_rest -> PLUS F T_rest
Rule 58    T_rest -> MINUS F T_rest
Rule 59    T_rest -> empty
Rule 60    F -> A F_rest
Rule 61    F_rest -> TIMES A F_rest
Rule 62    F_rest -> DIVIDE A F_rest
Rule 63    F_rest -> MOD A F_rest
Rule 64    F_rest -> empty
Rule 65    A -> LPAREN exp RPAREN
Rule 66    A -> ID llamada_func
Rule 67    A -> INT_NUM
Rule 68    A -> FLOAT_NUM
Rule 69    A -> STRING_LITERAL
Rule 70    A -> TRUE
Rule 71    A -> FALSE
Rule 72    llamada_func -> LPAREN lista_args RPAREN
Rule 73    llamada_func -> empty
Rule 74    lista_args -> exp lista_args_rest
Rule 75    lista_args -> empty
Rule 76    lista_args_rest -> COMMA exp lista_args_rest
Rule 77    lista_args_rest -> empty
Rule 78    empty -> <empty>

Terminals, with rules where they appear

AND                  : 46
BOOL                 : 38
COMMA                : 10 76
DIVIDE               : 62
ELSE                 : 28
EQ                   : 49
EQUALS               : 24 26
FALSE                : 71
FLOAT                : 37
FLOAT_NUM            : 68
FOR                  : 31
GE                   : 54
GT                   : 52
ID                   : 6 12 23 26 66
IF                   : 27
INT                  : 36
INT_NUM              : 67
LBRACE               : 13
LE                   : 53
LPAREN               : 6 7 27 30 31 35 65 72
LT                   : 51
MAIN                 : 7
MINUS                : 58
MOD                  : 63
NE                   : 50
OR                   : 43
PLUS                 : 57
PRINT                : 35
RBRACE               : 13
RETURN               : 32
RPAREN               : 6 7 27 30 31 35 65 72
SEMI                 : 16 17 31 31 32 35
STRING               : 39
STRING_LITERAL       : 69
TIMES                : 61
TRUE                 : 70
VOID                 : 7 40
WHILE                : 30
error                : 

Nonterminals, with rules where they appear

A                    : 60 61 62 63
C                    : 42 43
C_rest               : 45 46
E                    : 41
E_rest               : 42 43
Else                 : 27
F                    : 56 57 58
F_rest               : 60 61 62 63
For                  : 20
If                   : 18
Print                : 22
R                    : 45 46
R_rest               : 48 49 50 51 52 53 54
Return               : 21
T                    : 48 49 50 51 52 53 54
T_rest               : 56 57 58
While                : 19
asignacion           : 17 31 31
bloque               : 6 7 27 28 30 31
declaracion          : 16
empty                : 9 11 15 25 29 34 44 47 55 59 64 73 75 77
exp                  : 24 26 27 30 31 33 35 65 74 76
exp_opt              : 32
funcion_or_main      : 2 3
funciones            : 1 2
inicializacion       : 23
instruccion          : 14
instrucciones        : 13 14
lista_args           : 72
lista_args_rest      : 74 76
llamada_func         : 66
main_function_def    : 5
parametro            : 8 10
parametros           : 6 7
parametros_rest      : 8 10
programa             : 0
regular_function     : 4
tipo                 : 6 12 23

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . funciones
    (2) funciones -> . funcion_or_main funciones
    (3) funciones -> . funcion_or_main
    (4) funcion_or_main -> . regular_function
    (5) funcion_or_main -> . main_function_def
    (6) regular_function -> . tipo ID LPAREN parametros RPAREN bloque
    (7) main_function_def -> . VOID MAIN LPAREN parametros RPAREN bloque
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . BOOL
    (39) tipo -> . STRING
    (40) tipo -> . VOID

    VOID            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11

    programa                       shift and go to state 1
    funciones                      shift and go to state 2
    funcion_or_main                shift and go to state 3
    regular_function               shift and go to state 4
    main_function_def              shift and go to state 5
    tipo                           shift and go to state 6

state 1

    (0) S' -> programa .



state 2

    (1) programa -> funciones .

    $end            reduce using rule 1 (programa -> funciones .)


state 3

    (2) funciones -> funcion_or_main . funciones
    (3) funciones -> funcion_or_main .
    (2) funciones -> . funcion_or_main funciones
    (3) funciones -> . funcion_or_main
    (4) funcion_or_main -> . regular_function
    (5) funcion_or_main -> . main_function_def
    (6) regular_function -> . tipo ID LPAREN parametros RPAREN bloque
    (7) main_function_def -> . VOID MAIN LPAREN parametros RPAREN bloque
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . BOOL
    (39) tipo -> . STRING
    (40) tipo -> . VOID

    $end            reduce using rule 3 (funciones -> funcion_or_main .)
    VOID            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11

    funcion_or_main                shift and go to state 3
    funciones                      shift and go to state 12
    regular_function               shift and go to state 4
    main_function_def              shift and go to state 5
    tipo                           shift and go to state 6

state 4

    (4) funcion_or_main -> regular_function .

    VOID            reduce using rule 4 (funcion_or_main -> regular_function .)
    INT             reduce using rule 4 (funcion_or_main -> regular_function .)
    FLOAT           reduce using rule 4 (funcion_or_main -> regular_function .)
    BOOL            reduce using rule 4 (funcion_or_main -> regular_function .)
    STRING          reduce using rule 4 (funcion_or_main -> regular_function .)
    $end            reduce using rule 4 (funcion_or_main -> regular_function .)


state 5

    (5) funcion_or_main -> main_function_def .

    VOID            reduce using rule 5 (funcion_or_main -> main_function_def .)
    INT             reduce using rule 5 (funcion_or_main -> main_function_def .)
    FLOAT           reduce using rule 5 (funcion_or_main -> main_function_def .)
    BOOL            reduce using rule 5 (funcion_or_main -> main_function_def .)
    STRING          reduce using rule 5 (funcion_or_main -> main_function_def .)
    $end            reduce using rule 5 (funcion_or_main -> main_function_def .)


state 6

    (6) regular_function -> tipo . ID LPAREN parametros RPAREN bloque

    ID              shift and go to state 13


state 7

    (7) main_function_def -> VOID . MAIN LPAREN parametros RPAREN bloque
    (40) tipo -> VOID .

    MAIN            shift and go to state 14
    ID              reduce using rule 40 (tipo -> VOID .)


state 8

    (36) tipo -> INT .

    ID              reduce using rule 36 (tipo -> INT .)


state 9

    (37) tipo -> FLOAT .

    ID              reduce using rule 37 (tipo -> FLOAT .)


state 10

    (38) tipo -> BOOL .

    ID              reduce using rule 38 (tipo -> BOOL .)


state 11

    (39) tipo -> STRING .

    ID              reduce using rule 39 (tipo -> STRING .)


state 12

    (2) funciones -> funcion_or_main funciones .

    $end            reduce using rule 2 (funciones -> funcion_or_main funciones .)


state 13

    (6) regular_function -> tipo ID . LPAREN parametros RPAREN bloque

    LPAREN          shift and go to state 15


state 14

    (7) main_function_def -> VOID MAIN . LPAREN parametros RPAREN bloque

    LPAREN          shift and go to state 16


state 15

    (6) regular_function -> tipo ID LPAREN . parametros RPAREN bloque
    (8) parametros -> . parametro parametros_rest
    (9) parametros -> . empty
    (12) parametro -> . tipo ID
    (78) empty -> .
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . BOOL
    (39) tipo -> . STRING
    (40) tipo -> . VOID

    RPAREN          reduce using rule 78 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 21

    tipo                           shift and go to state 17
    parametros                     shift and go to state 18
    parametro                      shift and go to state 19
    empty                          shift and go to state 20

state 16

    (7) main_function_def -> VOID MAIN LPAREN . parametros RPAREN bloque
    (8) parametros -> . parametro parametros_rest
    (9) parametros -> . empty
    (12) parametro -> . tipo ID
    (78) empty -> .
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . BOOL
    (39) tipo -> . STRING
    (40) tipo -> . VOID

    RPAREN          reduce using rule 78 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 21

    parametros                     shift and go to state 22
    parametro                      shift and go to state 19
    empty                          shift and go to state 20
    tipo                           shift and go to state 17

state 17

    (12) parametro -> tipo . ID

    ID              shift and go to state 23


state 18

    (6) regular_function -> tipo ID LPAREN parametros . RPAREN bloque

    RPAREN          shift and go to state 24


state 19

    (8) parametros -> parametro . parametros_rest
    (10) parametros_rest -> . COMMA parametro parametros_rest
    (11) parametros_rest -> . empty
    (78) empty -> .

    COMMA           shift and go to state 26
    RPAREN          reduce using rule 78 (empty -> .)

    parametros_rest                shift and go to state 25
    empty                          shift and go to state 27

state 20

    (9) parametros -> empty .

    RPAREN          reduce using rule 9 (parametros -> empty .)


state 21

    (40) tipo -> VOID .

    ID              reduce using rule 40 (tipo -> VOID .)


state 22

    (7) main_function_def -> VOID MAIN LPAREN parametros . RPAREN bloque

    RPAREN          shift and go to state 28


state 23

    (12) parametro -> tipo ID .

    COMMA           reduce using rule 12 (parametro -> tipo ID .)
    RPAREN          reduce using rule 12 (parametro -> tipo ID .)


state 24

    (6) regular_function -> tipo ID LPAREN parametros RPAREN . bloque
    (13) bloque -> . LBRACE instrucciones RBRACE

    LBRACE          shift and go to state 30

    bloque                         shift and go to state 29

state 25

    (8) parametros -> parametro parametros_rest .

    RPAREN          reduce using rule 8 (parametros -> parametro parametros_rest .)


state 26

    (10) parametros_rest -> COMMA . parametro parametros_rest
    (12) parametro -> . tipo ID
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . BOOL
    (39) tipo -> . STRING
    (40) tipo -> . VOID

    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 21

    parametro                      shift and go to state 31
    tipo                           shift and go to state 17

state 27

    (11) parametros_rest -> empty .

    RPAREN          reduce using rule 11 (parametros_rest -> empty .)


state 28

    (7) main_function_def -> VOID MAIN LPAREN parametros RPAREN . bloque
    (13) bloque -> . LBRACE instrucciones RBRACE

    LBRACE          shift and go to state 30

    bloque                         shift and go to state 32

state 29

    (6) regular_function -> tipo ID LPAREN parametros RPAREN bloque .

    VOID            reduce using rule 6 (regular_function -> tipo ID LPAREN parametros RPAREN bloque .)
    INT             reduce using rule 6 (regular_function -> tipo ID LPAREN parametros RPAREN bloque .)
    FLOAT           reduce using rule 6 (regular_function -> tipo ID LPAREN parametros RPAREN bloque .)
    BOOL            reduce using rule 6 (regular_function -> tipo ID LPAREN parametros RPAREN bloque .)
    STRING          reduce using rule 6 (regular_function -> tipo ID LPAREN parametros RPAREN bloque .)
    $end            reduce using rule 6 (regular_function -> tipo ID LPAREN parametros RPAREN bloque .)


state 30

    (13) bloque -> LBRACE . instrucciones RBRACE
    (14) instrucciones -> . instruccion instrucciones
    (15) instrucciones -> . empty
    (16) instruccion -> . declaracion SEMI
    (17) instruccion -> . asignacion SEMI
    (18) instruccion -> . If
    (19) instruccion -> . While
    (20) instruccion -> . For
    (21) instruccion -> . Return
    (22) instruccion -> . Print
    (78) empty -> .
    (23) declaracion -> . tipo ID inicializacion
    (26) asignacion -> . ID EQUALS exp
    (27) If -> . IF LPAREN exp RPAREN bloque Else
    (30) While -> . WHILE LPAREN exp RPAREN bloque
    (31) For -> . FOR LPAREN asignacion SEMI exp SEMI asignacion RPAREN bloque
    (32) Return -> . RETURN exp_opt SEMI
    (35) Print -> . PRINT LPAREN exp RPAREN SEMI
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . BOOL
    (39) tipo -> . STRING
    (40) tipo -> . VOID

    RBRACE          reduce using rule 78 (empty -> .)
    ID              shift and go to state 44
    IF              shift and go to state 45
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    RETURN          shift and go to state 48
    PRINT           shift and go to state 49
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 21

    instrucciones                  shift and go to state 33
    instruccion                    shift and go to state 34
    empty                          shift and go to state 35
    declaracion                    shift and go to state 36
    asignacion                     shift and go to state 37
    If                             shift and go to state 38
    While                          shift and go to state 39
    For                            shift and go to state 40
    Return                         shift and go to state 41
    Print                          shift and go to state 42
    tipo                           shift and go to state 43

state 31

    (10) parametros_rest -> COMMA parametro . parametros_rest
    (10) parametros_rest -> . COMMA parametro parametros_rest
    (11) parametros_rest -> . empty
    (78) empty -> .

    COMMA           shift and go to state 26
    RPAREN          reduce using rule 78 (empty -> .)

    parametros_rest                shift and go to state 50
    empty                          shift and go to state 27

state 32

    (7) main_function_def -> VOID MAIN LPAREN parametros RPAREN bloque .

    VOID            reduce using rule 7 (main_function_def -> VOID MAIN LPAREN parametros RPAREN bloque .)
    INT             reduce using rule 7 (main_function_def -> VOID MAIN LPAREN parametros RPAREN bloque .)
    FLOAT           reduce using rule 7 (main_function_def -> VOID MAIN LPAREN parametros RPAREN bloque .)
    BOOL            reduce using rule 7 (main_function_def -> VOID MAIN LPAREN parametros RPAREN bloque .)
    STRING          reduce using rule 7 (main_function_def -> VOID MAIN LPAREN parametros RPAREN bloque .)
    $end            reduce using rule 7 (main_function_def -> VOID MAIN LPAREN parametros RPAREN bloque .)


state 33

    (13) bloque -> LBRACE instrucciones . RBRACE

    RBRACE          shift and go to state 51


state 34

    (14) instrucciones -> instruccion . instrucciones
    (14) instrucciones -> . instruccion instrucciones
    (15) instrucciones -> . empty
    (16) instruccion -> . declaracion SEMI
    (17) instruccion -> . asignacion SEMI
    (18) instruccion -> . If
    (19) instruccion -> . While
    (20) instruccion -> . For
    (21) instruccion -> . Return
    (22) instruccion -> . Print
    (78) empty -> .
    (23) declaracion -> . tipo ID inicializacion
    (26) asignacion -> . ID EQUALS exp
    (27) If -> . IF LPAREN exp RPAREN bloque Else
    (30) While -> . WHILE LPAREN exp RPAREN bloque
    (31) For -> . FOR LPAREN asignacion SEMI exp SEMI asignacion RPAREN bloque
    (32) Return -> . RETURN exp_opt SEMI
    (35) Print -> . PRINT LPAREN exp RPAREN SEMI
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . BOOL
    (39) tipo -> . STRING
    (40) tipo -> . VOID

    RBRACE          reduce using rule 78 (empty -> .)
    ID              shift and go to state 44
    IF              shift and go to state 45
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    RETURN          shift and go to state 48
    PRINT           shift and go to state 49
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 21

    instruccion                    shift and go to state 34
    instrucciones                  shift and go to state 52
    empty                          shift and go to state 35
    declaracion                    shift and go to state 36
    asignacion                     shift and go to state 37
    If                             shift and go to state 38
    While                          shift and go to state 39
    For                            shift and go to state 40
    Return                         shift and go to state 41
    Print                          shift and go to state 42
    tipo                           shift and go to state 43

state 35

    (15) instrucciones -> empty .

    RBRACE          reduce using rule 15 (instrucciones -> empty .)


state 36

    (16) instruccion -> declaracion . SEMI

    SEMI            shift and go to state 53


state 37

    (17) instruccion -> asignacion . SEMI

    SEMI            shift and go to state 54


state 38

    (18) instruccion -> If .

    ID              reduce using rule 18 (instruccion -> If .)
    IF              reduce using rule 18 (instruccion -> If .)
    WHILE           reduce using rule 18 (instruccion -> If .)
    FOR             reduce using rule 18 (instruccion -> If .)
    RETURN          reduce using rule 18 (instruccion -> If .)
    PRINT           reduce using rule 18 (instruccion -> If .)
    INT             reduce using rule 18 (instruccion -> If .)
    FLOAT           reduce using rule 18 (instruccion -> If .)
    BOOL            reduce using rule 18 (instruccion -> If .)
    STRING          reduce using rule 18 (instruccion -> If .)
    VOID            reduce using rule 18 (instruccion -> If .)
    RBRACE          reduce using rule 18 (instruccion -> If .)


state 39

    (19) instruccion -> While .

    ID              reduce using rule 19 (instruccion -> While .)
    IF              reduce using rule 19 (instruccion -> While .)
    WHILE           reduce using rule 19 (instruccion -> While .)
    FOR             reduce using rule 19 (instruccion -> While .)
    RETURN          reduce using rule 19 (instruccion -> While .)
    PRINT           reduce using rule 19 (instruccion -> While .)
    INT             reduce using rule 19 (instruccion -> While .)
    FLOAT           reduce using rule 19 (instruccion -> While .)
    BOOL            reduce using rule 19 (instruccion -> While .)
    STRING          reduce using rule 19 (instruccion -> While .)
    VOID            reduce using rule 19 (instruccion -> While .)
    RBRACE          reduce using rule 19 (instruccion -> While .)


state 40

    (20) instruccion -> For .

    ID              reduce using rule 20 (instruccion -> For .)
    IF              reduce using rule 20 (instruccion -> For .)
    WHILE           reduce using rule 20 (instruccion -> For .)
    FOR             reduce using rule 20 (instruccion -> For .)
    RETURN          reduce using rule 20 (instruccion -> For .)
    PRINT           reduce using rule 20 (instruccion -> For .)
    INT             reduce using rule 20 (instruccion -> For .)
    FLOAT           reduce using rule 20 (instruccion -> For .)
    BOOL            reduce using rule 20 (instruccion -> For .)
    STRING          reduce using rule 20 (instruccion -> For .)
    VOID            reduce using rule 20 (instruccion -> For .)
    RBRACE          reduce using rule 20 (instruccion -> For .)


state 41

    (21) instruccion -> Return .

    ID              reduce using rule 21 (instruccion -> Return .)
    IF              reduce using rule 21 (instruccion -> Return .)
    WHILE           reduce using rule 21 (instruccion -> Return .)
    FOR             reduce using rule 21 (instruccion -> Return .)
    RETURN          reduce using rule 21 (instruccion -> Return .)
    PRINT           reduce using rule 21 (instruccion -> Return .)
    INT             reduce using rule 21 (instruccion -> Return .)
    FLOAT           reduce using rule 21 (instruccion -> Return .)
    BOOL            reduce using rule 21 (instruccion -> Return .)
    STRING          reduce using rule 21 (instruccion -> Return .)
    VOID            reduce using rule 21 (instruccion -> Return .)
    RBRACE          reduce using rule 21 (instruccion -> Return .)


state 42

    (22) instruccion -> Print .

    ID              reduce using rule 22 (instruccion -> Print .)
    IF              reduce using rule 22 (instruccion -> Print .)
    WHILE           reduce using rule 22 (instruccion -> Print .)
    FOR             reduce using rule 22 (instruccion -> Print .)
    RETURN          reduce using rule 22 (instruccion -> Print .)
    PRINT           reduce using rule 22 (instruccion -> Print .)
    INT             reduce using rule 22 (instruccion -> Print .)
    FLOAT           reduce using rule 22 (instruccion -> Print .)
    BOOL            reduce using rule 22 (instruccion -> Print .)
    STRING          reduce using rule 22 (instruccion -> Print .)
    VOID            reduce using rule 22 (instruccion -> Print .)
    RBRACE          reduce using rule 22 (instruccion -> Print .)


state 43

    (23) declaracion -> tipo . ID inicializacion

    ID              shift and go to state 55


state 44

    (26) asignacion -> ID . EQUALS exp

    EQUALS          shift and go to state 56


state 45

    (27) If -> IF . LPAREN exp RPAREN bloque Else

    LPAREN          shift and go to state 57


state 46

    (30) While -> WHILE . LPAREN exp RPAREN bloque

    LPAREN          shift and go to state 58


state 47

    (31) For -> FOR . LPAREN asignacion SEMI exp SEMI asignacion RPAREN bloque

    LPAREN          shift and go to state 59


state 48

    (32) Return -> RETURN . exp_opt SEMI
    (33) exp_opt -> . exp
    (34) exp_opt -> . empty
    (41) exp -> . E
    (78) empty -> .
    (42) E -> . C E_rest
    (45) C -> . R C_rest
    (48) R -> . T R_rest
    (56) T -> . F T_rest
    (60) F -> . A F_rest
    (65) A -> . LPAREN exp RPAREN
    (66) A -> . ID llamada_func
    (67) A -> . INT_NUM
    (68) A -> . FLOAT_NUM
    (69) A -> . STRING_LITERAL
    (70) A -> . TRUE
    (71) A -> . FALSE

    SEMI            reduce using rule 78 (empty -> .)
    LPAREN          shift and go to state 69
    ID              shift and go to state 70
    INT_NUM         shift and go to state 71
    FLOAT_NUM       shift and go to state 72
    STRING_LITERAL  shift and go to state 73
    TRUE            shift and go to state 74
    FALSE           shift and go to state 75
